--- a/MVC_TTCS/css/home.css
+++ b/MVC_TTCS/css/home.css
@@ -33,17 +33,21 @@ body {
 }
 
 #head_right {
+    align-items:center;
+    text-align:center;
     margin: 30px 30px 0 0;
     padding: 0px;
 }
 
 #head_left {
+    align-items:center;
     margin: 30px 30px 0 0;
     padding: 0px;
 }
 
 .left_iteam,
 .right_itemn{
+    text-align:center;
     display: inline-block;
     list-style: none;
     color: var(--textHead);
