--- a/MVC_TTCS/Views/Home/Index.cshtml
+++ b/MVC_TTCS/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-
+@using MVC_TTCS.Models
     <div class="body_mid_index">
     <div class="trang_chu">
 
@@ -9,17 +9,26 @@
         <h2 class="detai">đề tài: Tạo báo cáo động</h2>
         <div class="giangvien-sinhvien">
             <div class="info">
-                <h2 class="chitietgv">Giảng viên: </h2>
-                <h2 class="tengv"> Lưu Nguyễn Kỳ Thư</h2>
+
+                <h2 class="chitietgv">Giảng viên hướng dẫn 1:Lưu Nguyễn Kỳ Thư </h2>
             </div>
             <div class="info">
-                <h2 class="chitietsv">Sinh Viên: </h2>
-                <h2 class="tensv"> Nguyễn Trọng Sơn</h2>
+                <h2 class="chitietgv">Giảng viên hướng dẫn 2: Huỳnh Trung Trụ</h2>
+            </div>
+            <div class="info">
+                <h2 class="chitietgv">Giảng viên phản biện: Huỳnh Trung Trụ</h2>
+            </div>
+            <div class="info">
+                <h2 class="chitietsv">Sinh Viên báo cáo: Nguyễn Trọng Sơn </h2>
             </div>
             <h5>HCM Ngày....Tháng...Năm... </h5>
         </div>
-        
+        <p id="testttt"></p>
+        <script>
+            var testModal = document.getElementById('testttt')
+            testModal.innerHTML = '@Model.tables'
 
+        </script>
     </div>
         
 </div>
