--- a/MVC_TTCS/Views/Shared/_Layout.cshtml
+++ b/MVC_TTCS/Views/Shared/_Layout.cshtml
@@ -66,10 +66,9 @@
                 </ul>
                 <div id="head_right">
                     <p id="user_name" style="font-size:30px; color:red;"></p>
-                    @*<button id="btn_login"class="open_login" onclick="clearmain(1)">Đăng nhập</button>
-                    <button id="btn_sigin"class="open_signup" onclick="clearmain(2)">Đăng ký</button>*@
-                    <button class="head3" onclick="clear_all_colum()" type"reload">clear all colum</button>
-                    <button class="head4" onclick="sinh_sql()">print</button>
+                    <button id="btn_login"class="open_login" onclick="clearmain(1)">Đăng nhập</button>
+                    <button id="btn_sigin"class="open_signup" onclick="clearmain(2)">Đăng ký</button>
+
 
                 </div>
             </header>
