--- a/MVC_TTCS/Views/Home/Index.cshtml
+++ b/MVC_TTCS/Views/Home/Index.cshtml
@@ -4,19 +4,9 @@
 @using MVC_TTCS.Models
 @model gui_query
 
-@using (Html.BeginForm("Index", "Home", FormMethod.Post)) {
 
  <div class="body_mid_contact">
-    <div class="header_contact">
-       
-        <p class="work_name">database</p>
-
-        @Html.TextAreaFor(m => m.gui_Lenh_SQL)
-        @* cllass ="edittext" data-lexical-text="true" id="SQL_input" value="tesst" style="font-size:25px;"></textarea>*@
-        <div class="head1">
-            <button class="head2" type="submit">print report</button>
-        </div>
-    </div>
+     
     <div class="body_work">
         <div class="left_work">
             <div class="table_column" id="tett" style="text-align: center;margin-top: 50px;">
@@ -33,11 +23,35 @@
                     <div class="right_work_sort" style="background: #a9c5eb;">sort</div>
                     <div class="tmp_input " style="background: #a9c5eb;">input sherr</div>
                 </div>
-
             </div>
+           
         </div>
+        <div class="btn_clear_and_print">
+            <ul class="2btn" style=" list-style: none;">
+                <li>
+                    <button class="head3" onclick="clear_all_colum()" type"reload" >clear all colum</button>
+                </li>
+                <li>
+                    <button class="head4" onclick="sinh_sql()">print</button>
+                </li>
+            </ul>
+           </div>
     </div>
+     @using (Html.BeginForm("Index", "Home", FormMethod.Post))
+     {
+
+        <div class="header_contact">
+
+            <p class="work_name">database</p>
+
+            @Html.TextAreaFor(m => m.gui_Lenh_SQL)
+            @* cllass ="edittext" data-lexical-text="true" id="SQL_input" value="tesst" style="font-size:25px;"></textarea>*@
+            <div class="head1">
+                <button class="head2" type="submit">print report</button>
+            </div>
+        </div>}
 </div>
+
 <input id="gettable" value="@ViewBag.gettable" style="display:none;">
 <input id="getcolumn" value="@ViewBag.getcolumn" style="display:none">
 <style>
@@ -52,11 +66,18 @@
         background: var( --bkgcolor);
     }
 
-    .body_mid_contact {
-        display: block;
+
+    form{
+        position:fixed;
+        bottom:0;
+        display: flex;
+        width: 100%;
+    justify-content: space-between;
     }
     .header_contact {
         display: flex;
+        width: 100%;
+
         margin-left: 20px;
         margin-right: 20px;
 
@@ -64,8 +85,12 @@
         border-radius: 20px;
         justify-content: space-between;
         align-items: center;
-        background: #a9c5eb;
+        background: #b2e9f9;
     }
+    .body_mid_contact {
+        display: block;
+    }
+    
 
         .header_contact p {
             height: 100%;
@@ -91,9 +116,8 @@
         margin-right: 20px;
     }
 
-    .head2,
-    .head3,
-    .head4 {
+    
+    .head2 {
         height: 100%;
         /* width: 100px; */
         border-radius: 4px;
@@ -101,19 +125,28 @@
         background: var(--bkgcolor);
         font-size: 20px;
     }
+     .head4,
+    .head3 {
+        height:80px ;
+        margin-top:30px;
+        width: 80%;
+        border-radius: 10px;
+        border: none;
+        background: var(--bkgcolor);
+        font-size: 25px;
+    }
 
+     .btn_clear_and_print{
+         display: inline-block;
+         position:fixed;
+         right:0;
+         justify-content:center;
+         margin-bottom:160px;
+     }
         .head2:hover, .head3:hover, .head4:hover {
             cursor: pointer;
             background: linear-gradient(135deg, rgb(224, 37, 199), rgb(255, 188, 246), rgb(255, 212, 249));
         }
-
-    .head4 {
-        width: 100px;
-    }
-
-    .head4 {
-        width: 100px;
-    }
 
 
     .body_work {
@@ -181,6 +214,7 @@
         left: 100%;
         top: 0;
         display: none;
+        z-index:1;
     }
 
     .table_column ul li:hover .colum_add {
@@ -407,12 +441,14 @@
             }
     // bat su kien onclick nut clear all column
             function clear_all_colum() {
+                input_select = "select";
+                input_from = " from ";
                 var tmp = table_pick_column.length
                 for (let i = 0; i < tmp; i++) {
                     var del_tmp = table_pick_column.pop();
                     var del = 'row_' + del_tmp;
                     console.log(del)
-
+                    tmp_pick_colum--;
                     var child = document.getElementById(del);
                     child.remove(del);
                     // mo lai nut trong pick column
@@ -423,7 +459,7 @@
 
                 // update text sql
                 var a = document.getElementById("gui_Lenh_SQL");
-                a.value = 'querty';
+                a.value = '';
             }
     // bat sukien button sinh sql
 
@@ -476,7 +512,7 @@
 
 
 </script>
-        }
+     
 
           
        
